# electron-integral-playground

./: .gitignore  CMakeLists.txt  README.md
electron_integral_code_generator/: boys_function_interpolate.py  cartesian_spherical_transformation.py  equation_MD.py  equation_mcmurchie_davidson.py  rys_quadrature_interpolate.py  sympy_utility.py
electron_integral_code_generator/math_constant/: binomial_coefficient.py  boys_function_interpolate.py  boys_function_prefactor.py  double_factorial.py  find_square_root_rational_expression.py  hermite_polynomial_coefficient.py  kernel_cartesian_normalization_constant.py
electron_integral_code_generator/tests/: test_cartesian_spherical_transformation.py  test_equation_MD.py  test_equation_mcmurchie_davidson.py  test_sympy_utility.py
electron_integral_playground/: basis.py  basis_utility.py  cell_utility.py  data_structure.py  geometry.py  pair_utility.py  units.py
electron_integral_playground/basis_reader/: gaussian_basis_reader.py
electron_integral_playground/c_library/: CMakeLists.txt  angular.h  boys_function.hpp  boys_function_interpolate_parameter.cpp  boys_function_interpolate_parameter.h  boys_function_spline_parameter.h  cartesian_spherical_transformation.hpp  indexing.hpp  kernel_cartesian_normalization.hpp  math_constants.hpp  mcmurchie_davidson_E_term.hpp  mcmurchie_davidson_R_term.hpp  mcmurchie_davidson_term.hpp  parallel_utility.h  utility.h
electron_integral_playground/data/: __init__.py
electron_integral_playground/geometry_reader/: permissive_xyz_reader.py  xyz_reader.py
examples/: test.py
(+80 files in other folders)
